2000-05-10 12:17:58  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* qp.el (quoted-printable-encode-region): Bind tab-width to 1. Set
	limit to 76.

2000-05-10 09:11:48  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnslashdot.el (nnslashdot-sid-strip): New function.
	(nnslashdot-threaded-retrieve-headers): New format.
	(nnslashdot-sane-retrieve-headers): Ditto.
	(nnslashdot-request-article): Ditto.
	(nnslashdot-threaded-retrieve-headers): Thread properly.
	(nnslashdot-request-article): Be more lenient.
	(nnslashdot-threaded-retrieve-headers): Regexp search.

2000-05-09 13:23:50  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-with-article): Define it before use it.

2000-05-08 22:34:19  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-supersede): Use mime-to-mml.
	* mm-decode.el (mm-insert-part): Test the buffer if no encoding.

2000-05-08 22:34:24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-list-cached): Don't use
	`subst-char-in-string'.
	
2000-05-08  Dave Love  <fx@gnu.org>

	* pop3.el (pop3-open-server): Fix creating name of trace buffer.

2000-05-08 01:07:47  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-interactively-view-part): Append %s if the
	method is a single word.
	* nnwarchive.el (nnwarchive-type-definition): Typo.

2000-05-07 17:24:01  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-group.el (gnus-group-prepare-flat-list-dead-predicate): New
	function.
	(gnus-group-prepare-flat-predicate): Use it.
	(gnus-group-list-cached): List dead groups.

2000-05-07 10:50:02  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (article-decode-charset): Don't decode message with
	format.

2000-05-07  Florian Weimer  <fw@deneb.cygnus.argh.org>

	* mailcap.el (mailcap-maybe-eval): Honor user request not to
	evaluate the Lisp code.

2000-05-06 17:40:20  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (article-wash-html): New function.
	(gnus-article-wash-html): Bind.
	(gnus-article-make-menu-bar): Menu item.